Fix spacing issues

--- a/_sass/components/_components.band.scss
+++ b/_sass/components/_components.band.scss
@@ -4,13 +4,13 @@
 
 // band
 .c-band {
-  margin-bottom: $spacer * 2;
-  margin-top: $spacer * 2;
-  padding: $spacer / 2;
+  margin-bottom: $spacing-unit-medium;
+  margin-top: $spacing-unit-medium;
+  padding: $spacing-unit;
   position: relative;
 
   @include mq($from: medium) {
-    padding: $spacer;
+    padding: $spacing-unit-medium;
   }  
 }
 
@@ -60,15 +60,4 @@
   top: 0;
   width: 100vw;
   z-index: -1;
-}
-
-.c-band--parallax {
-    margin: 0;
-   /* The image used */
-    background-image: url("../images/hero.jpg");
-    height: 45vh; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
