--- a/_sass/components/_components.donate.scss
+++ b/_sass/components/_components.donate.scss
@@ -6,10 +6,11 @@
 .c-donate {
   @include clearfix();
   background-color: $color-brand-tertiary;
-  padding: $spacer !important; // todo: fix to remove !important
+  padding: $spacing-unit;
   text-align: center;
 
   @include mq($from: medium) {
+    padding: $spacing-unit-medium;
     text-align: left;
   }
 }
