--- a/_sass/objects/_objects.layout-flex.scss
+++ b/_sass/objects/_objects.layout-flex.scss
@@ -5,26 +5,25 @@
 .o-layout-flex {
   display: flex;
   flex-flow: row wrap;
-  margin-left: -($spacer / 2);
-  margin-right: -($spacer / 2);  
+  margin-left: -$spacing-unit-tiny;
+  margin-right: -$spacing-unit-tiny;
+
+  @include mq($from: medium) {
+    margin-left: -$spacing-unit-small;
+    margin-right: -$spacing-unit-small;
+  }
 }
 
   .o-layout-flex__item {
     flex: 1 1 auto;
-    padding-left: ($spacer / 2);
-    padding-right: ($spacer / 2);    
-  }
+    padding-left: $spacing-unit-tiny;
+    padding-right: $spacing-unit-tiny;
 
-.o-layout-flex--gutters-wide {
-  margin-left: -$spacer;
-  margin-right: -$spacer;
-
-  > .o-layout-flex__item {
-    flex: 1 1 auto;
-    padding-left: $spacer;
-    padding-right: $spacer;
+    @include mq($from: medium) {
+      padding-left: $spacing-unit-small;
+      padding-right: $spacing-unit-small;      
+    }
   }
-}
 
 .o-layout-flex--justify-between {
   justify-content: space-between;
