--- a/_sass/settings/variables/_variables.spacing.scss
+++ b/_sass/settings/variables/_variables.spacing.scss
@@ -5,6 +5,7 @@
 $spacer:        2rem; // legacy spacer
 
 $spacing-unit:        1rem;
+$spacing-unit-tiny:   $spacing-unit / 4;
 $spacing-unit-small:  $spacing-unit / 2;
 $spacing-unit-medium: $spacing-unit * 2;
 $spacing-unit-large:  $spacing-unit * 4;
